update banner html

--- a/KXOJ/Resources/Files/Html/iframe.html
+++ b/KXOJ/Resources/Files/Html/iframe.html
@@ -12,27 +12,31 @@
     <head>
         <title></title>
         <meta content='' name='keywords'>
-            <meta content='' name='description'>
-                <meta content='' property='fb:app_id'>
-                    <meta content='' property='og:title'>
-                        <meta content='' property='og:image'>
-                            <meta content='website' property='og:type'>
-                                <meta content='' property='og:url'>
-                                    <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
-                                        <meta content='' name='viewport'>
-                                            <meta content='yes' name='apple-mobile-web-app-capable'>
-                                                <meta content='black' name='apple-mobile-web-app-status-bar-style'>
-                                                    <link rel="stylesheet" type="text/css" href="css/jcarousel.css"/>
-                                                    <script src="" type="text/javascript" charset="utf-8"></script>
-                                                    <style type="text/css">
-                                                        body{
-                                                            background: #000000;
-                                                            padding:  0 0;
-                                                            margin: 0;
-                                                        }
-                                                    </style>
+        <meta content='' name='description'>
+        <meta content='' property='fb:app_id'>
+        <meta content='' property='og:title'>
+        <meta content='' property='og:image'>
+        <meta content='website' property='og:type'>
+        <meta content='' property='og:url'>
+        <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
+        <meta content='' name='viewport'>
+        <meta content='yes' name='apple-mobile-web-app-capable'>
+        <meta content='black' name='apple-mobile-web-app-status-bar-style'>
+        <link rel="stylesheet" type="text/css" href="css/jcarousel.css"/>
+        <script src="" type="text/javascript" charset="utf-8"></script>
+        <style type="text/css">
+            body{
+                background: #000000;
+                padding:  0 0;
+                margin: 0;
+                width: 100%;
+                height: 100vh;
+            }
+        </style>
     </head>
     <body>
-        <iframe id='aefd2124' name='aefd2124' src='http://adserver.radioserversfive.com/www/delivery/afr.php?zoneid=127' frameborder='0' scrolling='no' width='320' height='50'><a href='http://adserver.radioserversfive.com/www/delivery/ck.php?n=a9193952' target='_blank'><img src='http://adserver.radioserversfive.com/www/delivery/avw.php?zoneid=127&amp;n=a9193952' border='0' alt='' /></a></iframe>
+        <a href='http://adserver.radioserversfive.com/www/delivery/ck.php?n=a9193952' target='_blank'>
+            <img src='http://adserver.radioserversfive.com/www/delivery/avw.php?zoneid=127&amp;n=a9193952' border='0' alt='' style="width:100%; height:100vh" />
+        </a>
     </body>
 </html>
