new banners - demo

--- a/KXOJ/Resources/Files/Html/iframe.html
+++ b/KXOJ/Resources/Files/Html/iframe.html
@@ -26,7 +26,6 @@
         <script src="" type="text/javascript" charset="utf-8"></script>
         <style type="text/css">
             body{
-                background: #000000;
                 padding:  0 0;
                 margin: 0;
                 width: 100%;
@@ -35,9 +34,8 @@
         </style>
     </head>
     <body>
-        <a href="http://adserver.radioserversfive.com/www/delivery/ck.php?oaparams=2__bannerid=843__zoneid=128__cb=90802e8a47__oadest=http%3A%2F%2Fwww.zilsgagnelaw.com"
-            target="_blank">
-            <img src="http://adserver.radioserversfive.com/www/images/8f9c5e301514ce1c2291797df24b74d9.png" width="728" height="90" alt="" title="" border="0" style="width:100%; height:100vh" />
-        </a>
+        <div>
+            <a href='http://adserver.radioserversfive.com/www/delivery/ck.php?n=a71a77be&amp;cb=123' target='_blank'><img src='http://adserver.radioserversfive.com/www/delivery/avw.php?zoneid=128&amp;cb=123&amp;n=a71a77be' border='0' style="width:100%"></a>
+            </div>
     </body>
 </html>
